feat: préparation déploiement Railway
- Ajout Dockerfiles (backend Java 21, frontend Nginx)
- Ajout configurations Railway (railway.json)
- Ajout application-prod.yml pour profil production
- Ajout chiffrement AES-256 pour PDFs (EncryptionService)
- Ajout stockage PDF en PostgreSQL (PdfStorageService)
- Ajout gestion stockage (StorageController, StorageManagementService)
- Ajout page gestion stockage frontend
- Ajout documentation déploiement (docs/)
- Ajout script d'installation (scripts/)
- Nettoyage: suppression fichiers target/, logs/, data/ du tracking
- Sécurité: PDFs patients ne sont plus versionnés
- Consolidation .gitignore